--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -4,8 +4,10 @@ $body-color: #FFF;
 
 $keestash-theme-color: #269dff;
 $keestash-theme-color-inverted: #F2F2F2;
+$keestash-theme-color-inverted-darker: #cce9ff;
 $keestash-theme-color-dark1: #0070cc;
 $keestash-theme-color-black: #3B3939;
+$keestash-theme-color-border-grey: #DEE2E6;
 $keestash-text-color: #000;
 $keestash-text-color-white: #FFF;
 $keestash-error-text-color-red: #DC143C;
