--- a/apps/general_api/template/frontend/confirmation.twig
+++ b/apps/general_api/template/frontend/confirmation.twig
@@ -1,19 +1,19 @@
-<div class="ui basic modal">
-    <div class="ui icon header">
-        <i class="archive icon"></i>
-        {{ header }}
-    </div>
-    <div class="content">
-        <p>{{ question }}</p>
-    </div>
-    <div class="actions">
-        <div class="ui red basic cancel inverted button">
-            <i class="remove icon"></i>
-            {{ no }}
-        </div>
-        <div class="ui green ok inverted button">
-            <i class="checkmark icon"></i>
-            {{ yes }}
+<div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">{{ header }}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                {{ description|raw }}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">{{ negativeButtonText }}</button>
+                <button type="button" class="btn btn-primary">{{ buttonText }}</button>
+            </div>
         </div>
     </div>
 </div>
