--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -14,6 +14,7 @@ $keestash-error-text-color-red: #DC143C;
 
 $keestash-avatar-size: 30px;
 $grey: #9e9e9e;
+$grey-dark: #484848;
 
 @import "../../vendor/twitter/bootstrap/scss/bootstrap.scss";
 
@@ -126,6 +127,33 @@ body {
     width: 100%;
     height: 100%;
   }
+
+  .btn-circle.btn-sm {
+    width: 30px;
+    height: 30px;
+    padding: 6px 0px;
+    border-radius: 15px;
+    font-size: 8px;
+    text-align: center;
+  }
+
+  .btn-circle.btn-md {
+    width: 50px;
+    height: 50px;
+    padding: 7px 10px;
+    border-radius: 25px;
+    font-size: 10px;
+    text-align: center;
+  }
+
+  .btn-circle.btn-xl {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    border-radius: 35px;
+    font-size: 12px;
+    text-align: center;
+  }
 }
 
 hr {
@@ -152,4 +180,8 @@ hr {
 
 a:visited, a:hover, a:active {
   color: $keestash-theme-color-dark1 !important;
+}
+
+.text-color-grey-dark {
+  color: $keestash-text-color;
 }
