--- a/template/app/navbar.twig
+++ b/template/app/navbar.twig
@@ -4,16 +4,22 @@
     </a>
 
     <div class="btn-group">
-        <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">
+        <button type="button"
+                class="btn dropdown-toggle"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+                data-target="#navbarDropdown"
+        >
             <img src="{{ userImage }}" class="avatar">
         </button>
-        <div class="dropdown-menu dropdown-menu-right">
+        <div id="navbarDropdown" class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             {% for partId, partEntry in settings %}
                 {% for id, entry in partEntry.getEntries() %}
 
-                    <a class="dropdown-item" href="{{ baseURL }}/{{ entry.getName()|lower }}"><i
-                                class="{{ entry.getFaClass() }} fa-1x"></i>&nbsp;{{ entry.getName() }}</a>
+                    <li><a class="dropdown-item" href="{{ baseURL }}/{{ entry.getName()|lower }}"><i
+                                    class="{{ entry.getFaClass() }} fa-1x"></i>&nbsp;{{ entry.getName() }}</a>
+                    </li>
                 {% endfor %}
 
             {% endfor %}
