user management with vue

--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -185,3 +185,7 @@ a:visited, a:hover, a:active {
 .text-color-grey-dark {
   color: $keestash-text-color;
 }
+
+.table {
+  color: $keestash-text-color;
+}
