--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -11,6 +11,7 @@ $keestash-theme-color-border-grey: #DEE2E6;
 $keestash-text-color: #000;
 $keestash-text-color-white: #FFF;
 $keestash-error-text-color-red: #DC143C;
+$keestash-color-yellow: #FFE24F;
 
 $keestash-avatar-size: 30px;
 $grey: #9e9e9e;
