avatar image update

--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -14,6 +14,7 @@ $keestash-error-text-color-red: #DC143C;
 $keestash-color-yellow: #FFE24F;
 
 $keestash-avatar-size: 30px;
+$keestash-avatar-size-m: 50px;
 $grey: #9e9e9e;
 $grey-dark: #484848;
 
