--- a/apps/general_api/template/frontend/mini.twig
+++ b/apps/general_api/template/frontend/mini.twig
@@ -6,7 +6,8 @@
                 {{ description }}
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">{{ negativeButtonText }}</button>
+                <button type="button" class="btn btn-primary">{{ buttonText }}</button>
             </div>
         </div>
     </div>
