--- a/apps/install_instance/template/install_instance.twig
+++ b/apps/install_instance/template/install_instance.twig
@@ -1,29 +1,1 @@
-<div class="container" id="install__instance__container">
-    <div class="row">
-        <h1>{{ installationHeader }}</h1>
-        <p class="text-justify">{{ installInstruction }}</p>
-    </div>
-    <div class="row">
-        <div class="col" id="ii__config__segment">
-            <h4>{{ configurationPartHeader }}</h4>
-            <div class="spinner-grow" role="status" id="ii__config__segment__dimmer"></div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col" id="ii__dirs__writable__segment">
-            <h4>{{ dirsWritablePartHeader }}</h4>
-            <div class="spinner-grow" role="status" id="ii__dirs__writable__segment__dimmer"></div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col" id="ii__has__data__dirs__segment">
-            <h4>{{ hasDataDirsPartHeader }}</h4>
-            <div class="spinner-grow" role="status" id="ii__has__data__dirs__segment__dimmer"></div>
-        </div>
-    </div>
-
-    <button type="button" class="btn btn-primary" id="ii__main__button">{{ endUpdate }}</button>
-
-</div>
+<div id="install_instance_app"></div>
