--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -180,7 +180,7 @@ hr {
   background: $keestash-theme-color-black;
 }
 
-a:visited, a:hover, a:active {
+a:visited, a:hover, a:active, a:link {
   color: $keestash-theme-color-dark1 !important;
 }
 
