--- a/apps/forgot_password/scss/style.scss
+++ b/apps/forgot_password/scss/style.scss
@@ -1,11 +1,11 @@
 @import "../../../lib/scss/style";
 
-.login {
-  .auth-wrapper {
+.forgot-password {
+  .forgot-password-wrapper {
     min-height: 100vh;
     position: relative;
 
-    .auth-box {
+    .formbox {
       background: #fff;
       padding: 20px;
       box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .1);
@@ -13,15 +13,20 @@
       width: 90%;
       margin: 10% 0;
 
-      .logo {
-        text-align: center;
+      #forgot-password-form {
 
-        #logo-image {
-          height: 5rem;
+        .logo {
+          text-align: center;
+
+          #logo-image {
+            height: 5rem;
+          }
         }
-
       }
+
+
     }
+
 
   }
 
