--- a/apps/login/scss/style.scss
+++ b/apps/login/scss/style.scss
@@ -1,30 +1,19 @@
 @import "../../../lib/scss/style";
 
 .login {
+
   .auth-wrapper {
     min-height: 100vh;
     position: relative;
 
     .auth-box {
       background: #fff;
+      //background: rgba(255,255,255, 0.3);
       padding: 20px;
       box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .1);
       max-width: 400px;
       width: 90%;
       margin: 10% 0;
-
-      #loginform-wrapper {
-        #loginform {
-          .inputgrouptext{
-            border: 0;
-            margin-right: 0.3vw;
-          }
-
-          .login-form-control{
-            border-radius: 0.25rem;
-          }
-        }
-      }
 
       .logo {
         text-align: center;
