--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -156,6 +156,17 @@ body {
     font-size: 12px;
     text-align: center;
   }
+
+  .ks-form {
+    .icon-wrapper {
+      border-radius: 0.25rem 0 0 0.25rem ;
+    }
+
+    .input-control {
+      border-radius: 0 0.25rem 0.25rem 0;
+      border-left: 0;
+    }
+  }
 }
 
 hr {
@@ -180,8 +191,13 @@ hr {
   background: $keestash-theme-color-black;
 }
 
-a:visited, a:hover, a:active, a:link {
-  color: $keestash-theme-color-dark1 !important;
+a, a:link {
+  color: $keestash-theme-color !important;
+}
+
+a:visited, a:hover, a:active {
+  text-decoration: underline;
+  text-decoration-color: $keestash-theme-color !important;
 }
 
 .text-color-grey-dark {
